# gupiao

./: ARCHITECTURE.md  Makefile  README.md  README_STRATEGY_OPTIMIZATION.md  README_TIME_PARTITIONED_DATASOURCE.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_strategy_optimization.py
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/backup/backup_1758816995997/: backup-meta.json
.promptx/memory/assistant/: declarative.dpml
.promptx/resource/: project.registry.json
cache/: metadata.json  metadata_backup.json
config/: strategy_config.yaml
ds/: DatasourceFactory.py
ds/ak/: AkShareDataSource.py
ds/baostock/: BaostockDataSource.py  test_baostock_data_source.py
ds/postgres/: PostgresStockDataSource.py
gupiao/: __init__.py
gupiao/datasource/baostock/: datasource.py
gupiao/datasource/cache/: README.md  __init__.py  datasource_manager.py  file_cache.py  metadata_manager.py
gupiao/datasource/stock/: README.md  __init__.py  base.py
gupiao/ds/: data_source_interface.py  datasource_factory.py  stock_data_source.py
gupiao/ds/ak/: AkShareDataSource.py
gupiao/ds/baostock/: baostock_data_source.py  test_baostock_data_source.py
gupiao/ds/parquet/: time_partitioned_data_source.py
src/gupiao/selector/: __init__.py  main.py
stock_selector/: README.md  main.py  requirements.txt
stock_selector/results/: stock_candidates_2024-01-08.csv  stock_candidates_2024-01-08.json
stock_selector/src/core/: preprocessor.py  runner.py  score_engine.py  strategy_engine.py
stock_selector/src/factors/: __init__.py  base_factor.py  financial_factor.py  fund_flow_factor.py  price_position_factor.py
stock_selector/src/reporters/: __init__.py
stock_selector/src/strategies/: base_strategy.py
stock_selector/src/utils/: logger.py
tests/: test_runner.py
tests/datasource/: __init__.py
tests/datasource/cache/: __init__.py  test_datasource_manager.py  test_storage.py  (+2 more)
(+469 files in other folders)
