[project]
name = "gupiao"
version = "1.0.0"
description = "股票推荐系统"
authors = [
    {name = "minzhiwei@live.cn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "baostock (>=0.8.9,<0.9.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
