[project]
name = "gupiao"
version = "1.0.0"
description = "选股程序"
authors = [
    {name = "sirmin",email = "minzhiwei@live.cn"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baostock (>=0.8.9,<0.9.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
